playground/notas_tests/valid/r2-05.hulk
function inc(x) => x + 1;
let outer = 1 in print(inc(outer));
