playground/notas_tests/invalid/type-02.hulk
let x = 1 in print(x is Ghost);
